# cards-for-humanity

./: .editorconfig  .env.example  .eslintignore  .eslintrc.json  .flake8  .gitattributes  .gitignore  Procfile  README.md  angular.json  codegen.yml  dump.rdb  karma.conf.js  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  requirements.txt  server.ts  setup.py  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.server-shell.json  tsconfig.server.json  tsconfig.spec.json  tslint.json
.storybook/: main.js
api/: admin.py  apps.py  crons.py  receivers.py  signals.py  utils.py  views.py
api/admin/: blackcard.py  game.py  genre.py  player.py  profile.py  user.py  whitecard.py
api/auth/: backends.py
api/graphql/: inputs.py  nodes.py  schema.py  types.py  ws_consumer.py
api/middlewares/: gql_auth.py  gql_depromise_subscription.py
api/migrations/: 0001_auto_20200130_1205.py  0001_initial.py  0002_auto_20200121_0219.py  0002_auto_20211018_2211.py  0002_cah.py  0003_alter_game_private.py  0003_alter_player_avatar.py  0003_auto_20200121_0610.py  0003_auto_20211020_2348.py  0003_user_username.py  0004_alter_player_avatar.py  0004_auto_20200121_0632.py  0004_auto_20211024_1835.py  0004_remove_user_username.py  0005_alter_game_num_players.py  0005_auto_20211118_1738.py  0005_auto_20211203_0456.py  0005_game_status.py  0006_auto_20211106_1835.py  0006_player_unique_player_game.py  0006_remove_provider_api_provider_email_or_phone.py  0007_auto_20211109_2034.py  0007_auto_20211203_1649.py  0007_provider_last_logout.py  0008_alter_player_game.py  0008_auto_20211109_2036.py  0009_alter_game_num_players.py  0010_game_private.py  0011_auto_20211205_0715.py  0012_auto_20211205_0718.py  0013_alter_game_winner.py  data-migrations.py
api/models/: __init__.py  answer.py  blackcard.py  card_base.py  email.py  game.py  genre.py  invite.py  password.py  player.py  profile.py  provider.py  question.py  serializers.py  timestamp.py  user.py  verification_code.py  whitecard.py
api/schema/: __init__.py  answer.py  auth.py  blackcard.py  game.py  genre.py  middlewares.py  player.py  question.py  user.py  whitecard.py
api/serializers/: blackcard.py  game.py  genre.py  player.py  whitecard.py
api/utils/: constants.py  enums.py  extended_connection.py  functions.py  graphql_errors.py  sql.py  user_manager.py  validators.py
app/: settings.py  urls.py
backend/api/: apps.py  celery.py  crons.py  receivers.py
backend/config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
client/: index.html  index.server.html  main.server.ts  main.ts  manifest.webmanifest  polyfills.ts  styles.scss  typings.ts
client/environments/: environment.prod.ts  environment.ts
client/styles/: _animations.scss  _variables.scss  styles.scss
config/: __init__.py  settings.py  urls.py  views.py
config/template/: backends.py
config/templates/: backends.py
data/: buildschema.js  json-against-humanity.js
data/blackcards/: json-aginst-humanity-90s.json  json-aginst-humanity-CAHe1.json  json-aginst-humanity-CAHe5.json  json-aginst-humanity-GOT.json  json-aginst-humanity-Image1.json  json-aginst-humanity-Ladies Against Humanity.json  json-aginst-humanity-NEIndy.json  json-aginst-humanity-christmas2013.json
data/genres/: json-aginst-humanity.json
data/whitecards/: json-aginst-humanity-Alternia.json  json-aginst-humanity-Box.json  json-aginst-humanity-CAHgrognards.json  json-aginst-humanity-CAHxmas.json  json-aginst-humanity-Image1.json  (+1 more)
e2e/: protractor.conf.js
plugins/: fixtures.js  ng-routes.js  typedefs.js
ssr/: builders.json  index.js  index.ts  package.json  ssr.ts
static/: 3rdpartylicenses.txt  5-es2015.00dd16194f8874e2b0db.js  5-es5.00dd16194f8874e2b0db.js  6-es2015.b00dd1ed16a4532cd52a.js  6-es5.b00dd1ed16a4532cd52a.js  7-es2015.5ae378c9164a996ff706.js  7-es5.5ae378c9164a996ff706.js  8-es2015.d20627feca763f5969e1.js  8-es5.d20627feca763f5969e1.js  9-es2015.81aab57e01eb1111e144.js  9-es5.81aab57e01eb1111e144.js  index.html  main-es2015.28f9674a5f029398e7fe.js  main-es2015.3e5dfddbd623833a3a63.js  main-es5.28f9674a5f029398e7fe.js  main-es5.3e5dfddbd623833a3a63.js  polyfills-es2015.3c1212ef70b730d8101c.js  polyfills-es5.b542887b8238ca85a370.js  runtime-es2015.c37a2228273cb5932b25.js  runtime-es5.c37a2228273cb5932b25.js  styles.4f9dcc18c15975739dbb.css  styles.aaf020184ecf2f71da08.css
(+539 files in other folders)
