[tool.poetry]
name = "cards-against-humanity"
version = "0.1.0"
description = "A party game for horrible people."
authors = ["victor-enogwe <victor.enogwe@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
